log
Sat 24 Sep 2022 12:13:58 AM UTC: 
 tests:  1|8
total_score: 0/70
8db37c9
Sat 24 Sep 2022 12:34:18 AM UTC: 
 treemap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:18: error: comparison between pointer and integer [-Werror]
   42 |   if (lower_than == 1){
      |                  ^~
treemap.c:43:32: error: ‘key2’ undeclared (first use in this function)
   43 |     Map->root = createTreeNode(key2, NULL);
      |                                ^~~~
treemap.c:43:32: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:38: error: ‘key1’ undeclared (first use in this function)
   44 |     Map->root->left = createTreeNode(key1, NULL);
      |                                      ^~~~
cc1: all warnings being treated as errors
Compilation failed
1256571
Sat 24 Sep 2022 12:34:45 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:32: error: ‘key2’ undeclared (first use in this function)
   43 |     Map->root = createTreeNode(key2, NULL);
      |                                ^~~~
treemap.c:43:32: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:38: error: ‘key1’ undeclared (first use in this function)
   44 |     Map->root->left = createTreeNode(key1, NULL);
      |                                      ^~~~
Compilation failed
a692086
Sat 24 Sep 2022 12:35:24 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:33: error: ‘key2’ undeclared (first use in this function)
   43 |     Map->root = createTreeNode(*key2, NULL);
      |                                 ^~~~
treemap.c:43:33: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:39: error: ‘key1’ undeclared (first use in this function)
   44 |     Map->root->left = createTreeNode(*key1, NULL);
      |                                       ^~~~
Compilation failed
33c5119
Sat 24 Sep 2022 12:38:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:33: error: ‘key2’ undeclared (first use in this function)
   43 |     Map->root = createTreeNode(*key2, NULL);
      |                                 ^~~~
treemap.c:43:33: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:39: error: ‘key1’ undeclared (first use in this function)
   44 |     Map->root->left = createTreeNode(*key1, NULL);
      |                                       ^~~~
Compilation failed
8d39018
Sat 24 Sep 2022 12:40:54 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:32: error: dereferencing ‘void *’ pointer [-Werror]
   45 |     Map->root = createTreeNode(*key2, NULL);
      |                                ^~~~~
treemap.c:45:32: error: invalid use of void expression
treemap.c:46:38: error: dereferencing ‘void *’ pointer [-Werror]
   46 |     Map->root->left = createTreeNode(*key1, NULL);
      |                                      ^~~~~
treemap.c:46:38: error: invalid use of void expression
treemap.c:50:32: error: dereferencing ‘void *’ pointer [-Werror]
   50 |     Map->root = createTreeNode(*key1, NULL);
      |                                ^~~~~
treemap.c:50:32: error: invalid use of void expression
treemap.c:51:39: error: dereferencing ‘void *’ pointer [-Werror]
   51 |     Map->root->right = createTreeNode(*key2, NULL);
      |                                       ^~~~~
treemap.c:51:39: error: invalid use of void expression
cc1: all warnings being treated as errors
Compilation failed
5c31beb
Sat 24 Sep 2022 12:41:10 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:17: error: ‘key2’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   45 |     Map->root = createTreeNode(key2, NULL);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:46:23: error: ‘key1’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   46 |     Map->root->left = createTreeNode(key1, NULL);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a760100
